apps/static-sample/kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: static-sample
spec: {}
status: {}
