apps/static-sample/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: static-sample
  name: static-sample
  namespace: static-sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-sample
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: static-sample
    spec:
      containers:
        - image: ghcr.io/atrakic/go-static-site:1673811703 # {"$imagepolicy": "flux-system:static-sample"}
          name: go-static-site
