apps/static-sample/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: static-sample
  name: static-sample
  namespace: static-sample
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: static-sample
  type: ClusterIP
status:
  loadBalancer: {}
